# codex-qa

./: README.md  config.example.yaml  pyproject.toml  setup.cfg
qa_logger/: __init__.py  __main__.py  config.py  logger.py  redaction.py  transcript_parser.py
scripts/: install_with_uv.sh
tests/: test_config.py  test_logger.py  test_logger_compat.py  test_parser.py
