[metadata]
name = qa-logger
version = 0.1.0
description = Local Q&A logger for Codex prompts and responses
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
include =
    qa_logger*

[options.entry_points]
console_scripts =
    qa-logger = qa_logger.__main__:main
